[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
sha-1 = "0.10.1"                                   # Hashing
hex-literal = "0.4.1"
base16ct = "0.2.0"
hex = "0.4"